syntax = "proto3";

package auth.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/Administration-LGL/miam-apiserver/api/auth/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.auth.v1";
option java_outer_classname = "AuthProtoV1";

// The greeting service definition.
service Auth {
  rpc Login (LoginRequest)returns (LoginReply){
    option (google.api.http) = {
        post: "/v1/login",
        body: "*"
      };
  }

  // rpc Logout()returns (){

  // }
}

message LoginRequest {
  string username = 1;
  string password = 2;
}
message LoginReply {
  string token = 1;
}